# Onvif

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  install.sh  install_3rdparty.sh
CMake/: Dependance.cmake
cmake/: Dependance.cmake  FindGLOG.cmake  FindWSDiscovery.cmake
include/WSDiscovery/: discoverythread.h
include/ws_discovery/: discoverythread.h
modules/WSDiscovery/: CMakeLists.txt
modules/WSDiscovery/onvif/: descdevice.h  discoveryobj.cpp  discoveryobj.h  discoverythread.cpp
modules/WSDiscovery/soap/: RemoteDiscoveryBinding.nsmap  wsddapi.h
modules/WSDiscovery/test/: wsdd_server.cpp
modules/common/: CMakeLists.txt  Logger.cpp  Logger.h
modules/ws_discovery/: CMakeLists.txt
modules/ws_discovery/soap/: onvifdiscoC.cpp  onvifdiscoH.h  onvifdiscoStub.h  wsaapi.cpp  wsaapi.h  wsddapi.cpp
modules/ws_discovery/test/: wsdd_server.cpp
